unpackaged/main/default/objects/API_Connector__Criteria_Base_Settings__c/API_Connector__Criteria_Base_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Criteria Base Setting</label>
</CustomObject>