unpackaged/main/default/objects/API_Connector__Criteria_Base_Settings__c/fields/API_Connector__Custom_Logic__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Custom_Logic__c</fullName>
    <label>Custom Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>