unpackaged/main/default/objects/API_Connector__Criteria_Base_Settings__c/fields/API_Connector__Value3__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Value3__c</fullName>
    <label>Value3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>